--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
 <!--CSS Frameworks-->
-<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link type="text/css" rel="stylesheet" href="css/style.css">
+<link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css">
+<link type="text/css" rel="stylesheet" href="assets/css/font-awesome.min.css">
+<link type="text/css" rel="stylesheet" href="assets/css/style.css">
 <!--Javascript Frameworks-->
-<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
-<script type="text/javascript" src="js/jQueryRotateCompressed.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="assets/js/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="assets/js/jQueryRotateCompressed.js"></script>
+<script type="text/javascript" src="assets/js/main.js"></script>
 </head>
 <body>
 
