--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
 			</div>
 			
 			<div class="skills">
+				<ul>
+					<li><div id="skill-container"><div id="python"><p>Python</p></div></div></li>
+					<li><div id="skill-container"><div id="html"><p>HTML/CSS</p></div></div></li>
+					<li><div id="skill-container"><div id="js"><p>JS</p></div></div></li>
+					<li><div id="skill-container"><div id="php"><p>PHP</p></div></div></li>
+					<li><div id="skill-container"><div id="c"><p>C</p></div></div></li>
+				</ul>
 			</div>
 			
 	</div>
