--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 			
 			<div class="skills">
 				<ul>
-					<li><div id="skill-container"><div id="python"><p>Python</p></div></div></li>
-					<li><div id="skill-container"><div id="html"><p>HTML/CSS</p></div></div></li>
-					<li><div id="skill-container"><div id="js"><p>JS</p></div></div></li>
-					<li><div id="skill-container"><div id="php"><p>PHP</p></div></div></li>
-					<li><div id="skill-container"><div id="c"><p>C</p></div></div></li>
+					<li><div id="skill-container"><div class="slide-right" id="python"><p>Python</p></div></div></li>
+					<li><div id="skill-container"><div class="slide-right" id="html"><p>HTML/CSS</p></div></div></li>
+					<li><div id="skill-container"><div class="slide-right" id="js"><p>JS</p></div></div></li>
+					<li><div id="skill-container"><div class="slide-right" id="php"><p>PHP</p></div></div></li>
+					<li><div id="skill-container"><div class="slide-right" id="c"><p>C</p></div></div></li>
 				</ul>
 			</div>
 			
