Tweaking skills chart animation
Using a smoother animation. Need to come back around to fix positioning
issues when the about section is toggled.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link type="text/css" rel="stylesheet" href="assets/css/style.css">
 <!--Javascript Frameworks-->
 <script type="text/javascript" src="assets/js/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
 <script type="text/javascript" src="assets/js/jQueryRotateCompressed.js"></script>
 <script type="text/javascript" src="assets/js/main.js"></script>
 </head>
@@ -67,11 +68,11 @@
 			
 			<div class="skills">
 				<ul>
-					<li><div id="skill-container"><div class="slide-right" id="python"><p>Python</p></div></div></li>
-					<li><div id="skill-container"><div class="slide-right" id="html"><p>HTML/CSS</p></div></div></li>
-					<li><div id="skill-container"><div class="slide-right" id="php"><p>PHP</p></div></div></li>
-					<li><div id="skill-container"><div class="slide-right" id="js"><p>JS</p></div></div></li>
-					<li><div id="skill-container"><div class="slide-right" id="c"><p>C</p></div></div></li>
+					<li><div id="skill-container"><div id="python"><p>Python</p></div></div></li>
+					<li><div id="skill-container"><div id="html"><p>HTML/CSS</p></div></div></li>
+					<li><div id="skill-container"><div id="php"><p>PHP</p></div></div></li>
+					<li><div id="skill-container"><div id="js"><p>JS</p></div></div></li>
+					<li><div id="skill-container"><div id="c"><p>C</p></div></div></li>
 				</ul>
 			</div>
 			
