--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</div>
 		
 		<div class="bottom-center" id="scroll">
-			<a><span class="fa fa-chevron-down"></span></a>
+			<a href=""><span class="fa fa-chevron-down"></span></a>
 		</div>
 	
 	<div class="container-fluid about-section">
