--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>Robleh Esa | Business Card</title>
+<title>Robleh Esa | Digital Card</title>
 <!--CSS Frameworks-->
 <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css">
 <link type="text/css" rel="stylesheet" href="assets/css/font-awesome.min.css">
